[project]
name = "adventofcode2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DawnMagnet", email = "5643840+dawn_magnet@user.noreply.gitee.com" },
]
dependencies = ["numpy>=1.24.4", "pandas>=2.0.3"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "adventofcode2023:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/adventofcode2023"]
